finish iteration 3