@@ -12,7 +12,7 @@ import jakarta.servlet.http.*;
 import model.Account;
 import model.Blog;
 import model.BlogMedia;
-import utils.Encoder;
+import utils.PermissionUtil;
 
 import java.io.File;
 import java.io.IOException;
@@ -22,15 +22,22 @@ import java.time.LocalDate;
 import java.util.*;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
+/**
+ * <h4>PostDetailsController - Quản lý chi tiết bài viết</h4>
+ *
+ * <p>Servlet cho phép hiển thị, thêm, cập nhật, xóa bài viết Blog cùng với các file đa phương tiện đính kèm (hình ảnh, video).</p>
+ *
+ * <p>Servlet hỗ trợ upload file đa phương tiện, validate đầy đủ dữ liệu và chính sửa nội dung bài viết.</p>
+ *
+ * @author HuongNI
+ */
 @WebServlet(name = "PostDetailsController", urlPatterns = {"/post-details"})
 @MultipartConfig(
         fileSizeThreshold = 1024 * 1024 * 2,
         maxFileSize = 1024 * 1024 * 30,
         maxRequestSize = 1024 * 1024 * 50
 )
-
 public class PostDetailsController extends HttpServlet {
 
     private static final String IMAGE_DIR = "img/";
@@ -50,15 +57,20 @@ public class PostDetailsController extends HttpServlet {
         this.logger = Logger.getLogger(this.getClass().getName());
     }
 
+    /**
+     * <h4>doGet - Hiển thị danh sách bài viết với phân trang, redirect to homepage if not marketer or admin</h4>
+     * <p>Xử lý truy vấn GET để hiển thị danh sách blog, đánh dấu theo category, keyword, page,...</p>
+     */
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
 
-//        HttpSession session = request.getSession();
-//        Account currentUser = (Account) session.getAttribute("currentUser");
-//        if (currentUser == null || !currentUser.getRoleId().equals(accountDAO.getRoleIdByRoleName("Admin"))) {
-//            response.sendRedirect(request.getContextPath() + "/blog-list");
-//        }
+
+        // Check a role to access this page. If not, redirect to the home page.
+//        String redirectUrl = request.getContextPath() + "/home";
+//        if (PermissionUtil.redirectIfNotRole(request, response, "MARKETER" ,redirectUrl)
+//        && PermissionUtil.redirectIfNotRole(request, response, "ADMIN" ,redirectUrl)) return;
+
         String keyword = request.getParameter("keyword");
         String category = request.getParameter("category");
         String message = request.getParameter("message");
@@ -75,38 +87,103 @@ public class PostDetailsController extends HttpServlet {
             message = e.getMessage();
         }
 
-        List<BlogDTO> categories = getAllCategories();
+        List<BlogDTO> categories = getAllCategories("Blog Category");
         request.setAttribute("categories", categories);
         handleRequest(request, response, message, type);
     }
 
+    /**
+     * <h4>doPost - Xử lý các thao tác: thêm, xóa, cập nhật bài viết</h4>
+     * <p>Dựa vào tham số action trong form để phân quyến đến method tương ứng.</p>
+     */
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        String action = request.getParameter("action");
+        var action = request.getParameter("action");
 
         try {
             if (action == null || action.isBlank()) {
-                String message = "Invalid action!";
-                String type = "error";
+                var message = "Invalid action!";
+                var type = "error";
                 response.sendRedirect(request.getContextPath() + "/post-details" + "?message=" + message + "&type=" + type);
                 return;
             }
             switch (action) {
-                case "add-post" ->
-                    handleAddNewPost(request, response);
-                case "delete-post" ->
-                    handleDeletePost(request, response);
-                case "update-post" ->
-                    handleUpdatePost(request, response);
+                case "add-post" -> handleAddNewPost(request, response);
+                case "update-post" -> handleUpdatePost(request, response);
                 default ->
-                    request.getRequestDispatcher("/jsp/marketing-features/post-details.jsp").forward(request, response);
+                        request.getRequestDispatcher("/jsp/marketing-features/post-details.jsp").forward(request, response);
             }
         } catch (Exception e) {
             logger.log(Level.SEVERE, e.getMessage(), e);
         }
     }
 
+    /**
+     * <h4>Xử lý yêu cầu HTTP DELETE để xóa blog theo ID</h4>
+     *
+     * <p>Phương thức này thực hiện các bước sau:</p>
+     * <ol>
+     *   <li>Đọc JSON từ body request.</li>
+     *   <li>Trích xuất giá trị `id` (mã hóa).</li>
+     *   <li>Giải mã ID và tiến hành xóa blog & các media liên quan.</li>
+     *   <li>Trả về mã HTTP tương ứng với kết quả xử lý.</li>
+     * </ol>
+     *
+     * <p><b>Trường hợp thành công:</b> trả về mã <code>200 OK</code> kèm thông điệp "Delete successfully!".</p>
+     * <p><b>Trường hợp thất bại:</b></p>
+     * <ul>
+     *   <li>Nếu thiếu `id` → <code>400 Bad Request</code></li>
+     *   <li>Nếu không có blog tương ứng → <code>404 Not Found</code></li>
+     *   <li>Nếu có lỗi khi xử lý → <code>400 Bad Request</code> với log chi tiết.</li>
+     * </ul>
+     *
+     * <p>Ghi chú: ID là UUID được encode nên cần decode trước khi xử lý.</p>
+     *
+     * @param request  đối tượng {@link HttpServletRequest} chứa body JSON với key <code>id</code>.
+     * @param response đối tượng {@link HttpServletResponse} để ghi kết quả trả về.
+     * @throws IOException nếu có lỗi khi đọc request hoặc ghi response.
+     * @author HuongNI
+     */
+    @Override
+    protected void doDelete(HttpServletRequest request, HttpServletResponse response)
+            throws IOException {
+        var mapper = new ObjectMapper();
+        var jsonNode = mapper.readTree(request.getReader());
+
+        var id = jsonNode.has("id") ? jsonNode.get("id").asText() : null;
+
+        logger.info(">>>>>>> id: " + id);
+
+        if (id == null || id.isEmpty()) {
+            response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+            response.getWriter().println("Missing blog ID.");
+            return;
+        }
+
+        try {
+            String decodedId = utils.Encoder.decode(id);
+            boolean blogRowAffected = blogDAO.deleteBlogById(decodedId);
+            blogMediaDAO.deleteBlogMediaByBlogId(UUID.fromString(decodedId));
+
+            if (blogRowAffected) {
+                response.setStatus(HttpServletResponse.SC_OK);
+                response.getWriter().println("Delete successfully!");
+            } else {
+                response.setStatus(HttpServletResponse.SC_NOT_FOUND);
+                response.getWriter().println("No matching record found.");
+            }
+        } catch (Exception e) {
+            logger.log(Level.SEVERE, "Failed to delete blog with id = " + id, e);
+            response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+            response.getWriter().println("Bad request");
+        }
+    }
+
+    /**
+     * <h4>handleAddNewPost - Thêm bài viết mới</h4>
+     * <p>Kiểm tra đầy đủ trường nhập, upload file, và thên bài với metadata cần thiết.</p>
+     */
     private void handleUpdatePost(HttpServletRequest request, HttpServletResponse response) throws IOException {
         String id = request.getParameter("id");
         String message = "";
@@ -124,7 +201,6 @@ public class PostDetailsController extends HttpServlet {
                 message = "Please fill all fields!";
                 type = "error";
                 response.sendRedirect(request.getContextPath() + "/post-details" + "?message=" + message + "&type=" + type);
-                return;
             }
 
             boolean featuredBool = featured != null;
@@ -163,7 +239,11 @@ public class PostDetailsController extends HttpServlet {
         response.sendRedirect(request.getContextPath() + "/post-details" + "?message=" + message + "&type=" + type);
     }
 
-    private void handleAddNewPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+    /**
+     * <h4>handleUpdatePost - Cập nhật nội dung bài viết</h4>
+     * <p>Lấy thông tin cập nhật từ form và update vào DB theo ID.</p>
+     */
+    private void handleAddNewPost(HttpServletRequest request, HttpServletResponse response) throws IOException {
         String message = "";
         String type = "";
         try {
@@ -223,30 +303,24 @@ public class PostDetailsController extends HttpServlet {
         response.sendRedirect(request.getContextPath() + "/post-details" + "?message=" + message + "&type=" + type);
     }
 
-    private void handleDeletePost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        String id = request.getParameter("id");
-        String message = "";
-        String type = "";
-
-        boolean blogRowAffected = blogDAO.deleteBlogById(utils.Encoder.decode(id));
-        boolean mediaRowAffected = blogMediaDAO.deleteBlogMediaByBlogId(UUID.fromString(utils.Encoder.decode(id)));
-        if (!blogRowAffected && !mediaRowAffected) {
-            message = "Delete fall";
-            type = "error";
-        } else {
-            message = "Delete successfully!";
-            type = "success";
-        }
-        request.setAttribute("message", message);
-        request.setAttribute("type", type);
-        response.sendRedirect(request.getContextPath() + "/post-details" + "?message=" + message + "&type=" + type);
-    }
-
+    /**
+     * <h4>Xử lý upload file media</h4>
+     * <p>
+     * Lọc ra danh sách các phần tử media hợp lệ từ form submit, xử lý từng file và tạo danh sách các đối tượng BlogMedia.
+     * </p>
+     *
+     * @param request yêu cầu HTTP chứa các file media
+     * @param blogId  ID của bài viết cần gắn media
+     * @return danh sách BlogMedia đã xử lý
+     * @throws ServletException nếu có lỗi Servlet
+     * @throws IOException      nếu có lỗi IO khi xử lý file
+     * @author HuongNI
+     */
     private List<BlogMedia> handleUploadFile(HttpServletRequest request, UUID blogId) throws ServletException, IOException {
         List<Part> mediaParts = request.getParts()
                 .stream()
                 .filter(part -> "media".equals(part.getName()) && isValidPart(part))
-                .collect(Collectors.toList());
+                .toList();
 
         if (mediaParts.isEmpty()) {
             logger.warning("No valid media files found in request");
@@ -271,6 +345,20 @@ public class PostDetailsController extends HttpServlet {
         return blogMediaList;
     }
 
+    /**
+     * <h4>Xử lý từng file media</h4>
+     * <p>
+     * Lưu file, xác định loại file (image/video), caption và vị trí hiển thị để tạo đối tượng BlogMedia.
+     * </p>
+     *
+     * @param mediaPart    file media từ form
+     * @param blogId       ID của bài viết
+     * @param displayOrder thứ tự hiển thị của file
+     * @param captions     map chứa các caption theo thứ tự
+     * @return đối tượng BlogMedia nếu thành công, null nếu không hợp lệ
+     * @throws IOException nếu xảy ra lỗi IO khi lưu file
+     * @author HuongNI
+     */
     private BlogMedia processMediaPartAndPost(Part mediaPart, UUID blogId, int displayOrder, Map<String, String> captions) throws IOException {
         String originalName = Paths.get(mediaPart.getSubmittedFileName()).getFileName().toString();
         String extension = getExtension(originalName);
@@ -289,12 +377,25 @@ public class PostDetailsController extends HttpServlet {
                 .id(UUID.randomUUID())
                 .blogId(blogId)
                 .mediaType(mediaType)
-                .mediaUrl(savedFilePath)
+                .file_path(savedFilePath)
                 .caption(caption)
                 .displayOrder(displayOrder)
                 .build();
     }
 
+    /**
+     * <h4>Lưu file vào hệ thống</h4>
+     * <p>
+     * Tạo tên file an toàn và lưu vào thư mục tương ứng. Trả về đường dẫn tương đối đến file.
+     * </p>
+     *
+     * @param part     phần dữ liệu file
+     * @param folder   thư mục lưu trữ (ví dụ: "img/", "video/")
+     * @param fileName tên gốc của file
+     * @return đường dẫn tương đối tới file đã lưu
+     * @throws IOException nếu xảy ra lỗi ghi file
+     * @author HuongNI
+     */
     private String saveFile(Part part, String folder, String fileName) throws IOException {
         String uniqueFileName = getSafeFileName(fileName);
         String relativePath = folder + uniqueFileName;
@@ -318,6 +419,16 @@ public class PostDetailsController extends HttpServlet {
         return relativePath;
     }
 
+    /**
+     * <h4>Kiểm tra tính hợp lệ của file</h4>
+     * <p>
+     * Đảm bảo file có tên và dung lượng hợp lệ, và có phần mở rộng nằm trong danh sách được hỗ trợ.
+     * </p>
+     *
+     * @param part phần dữ liệu file
+     * @return true nếu hợp lệ, ngược lại false
+     * @author HuongNI
+     */
     private boolean isValidPart(Part part) {
         if (part == null || part.getSubmittedFileName() == null || part.getSize() <= 0) {
             return false;
@@ -327,6 +438,16 @@ public class PostDetailsController extends HttpServlet {
         return IMAGE_EXTS.contains(extension) || VIDEO_EXTS.contains(extension);
     }
 
+    /**
+     * <h4>Xác định loại file</h4>
+     * <p>
+     * Trả về "image" hoặc "video" dựa trên phần mở rộng của file.
+     * </p>
+     *
+     * @param extension phần mở rộng (ví dụ: "jpg", "mp4")
+     * @return loại file tương ứng hoặc null nếu không hợp lệ
+     * @author HuongNI
+     */
     private String getFileType(String extension) {
         if (IMAGE_EXTS.contains(extension)) {
             return "image";
@@ -337,6 +458,16 @@ public class PostDetailsController extends HttpServlet {
         return null;
     }
 
+    /**
+     * <h4>Trích xuất caption từ request</h4>
+     * <p>
+     * Tìm các tham số có dạng "caption_X" và lưu vào map.
+     * </p>
+     *
+     * @param request yêu cầu HTTP chứa dữ liệu form
+     * @return map các caption theo thứ tự hiển thị
+     * @author HuongNI
+     */
     private Map<String, String> extractCaptions(HttpServletRequest request) {
         Map<String, String> map = new HashMap<>();
         request.getParameterMap().forEach((key, value) -> {
@@ -347,13 +478,32 @@ public class PostDetailsController extends HttpServlet {
         return map;
     }
 
+    /**
+     * <h4>Lấy phần mở rộng của file</h4>
+     * <p>
+     * Dựa trên dấu chấm cuối trong tên file.
+     * </p>
+     *
+     * @param filename tên file
+     * @return phần mở rộng (ví dụ: "png"), hoặc chuỗi rỗng nếu không có
+     * @author HuongNI
+     */
     private String getExtension(String filename) {
         int dot = filename.lastIndexOf('.');
         return (dot >= 0) ? filename.substring(dot + 1).toLowerCase() : "";
     }
 
+    /**
+     * <h4>Tạo tên file an toàn và không trùng lặp</h4>
+     * <p>
+     * Loại bỏ ký tự đặc biệt, Unicode, và thêm UUID để tránh trùng tên.
+     * </p>
+     *
+     * @param originalFileName tên file ban đầu
+     * @return tên file đã xử lý an toàn
+     * @author HuongNI
+     */
     public static String getSafeFileName(String originalFileName) {
-        String fileName = originalFileName == null ? "unknown" : originalFileName;
         String name = Normalizer.normalize(originalFileName, Normalizer.Form.NFD)
                 .replaceAll("\\p{InCombiningDiacriticalMarks}+", "")
                 .replaceAll("đ", "d")
@@ -366,9 +516,19 @@ public class PostDetailsController extends HttpServlet {
         String baseName = (dotIndex != -1) ? name.substring(0, dotIndex) : name;
         String extension = (dotIndex != -1) ? name.substring(dotIndex) : "";
 
-        return UUID.randomUUID().toString() + "_" + baseName + extension;
+        return UUID.randomUUID() + "_" + baseName + extension;
     }
 
+    /**
+     * <h4>Xác định thư mục lưu trữ theo phần mở rộng</h4>
+     * <p>
+     * Trả về đường dẫn thư mục tương ứng ("img/" hoặc "video/") dựa trên phần mở rộng của file.
+     * </p>
+     *
+     * @param extension phần mở rộng của file (vd: "jpg", "mp4")
+     * @return đường dẫn thư mục hoặc null nếu không xác định được
+     * @author TuanKD
+     */
     private String getTargetFolder(String extension) {
         if (IMAGE_EXTS.contains(extension)) {
             return IMAGE_DIR;
@@ -379,21 +539,55 @@ public class PostDetailsController extends HttpServlet {
         return null;
     }
 
+    /**
+     * <h4>Xử lý và forward thông báo tới trang JSP</h4>
+     * <p>
+     * Thiết lập các thuộc tính thông báo và chuyển hướng đến trang post-details.
+     * </p>
+     *
+     * @param request  yêu cầu từ client
+     * @param response phản hồi về client
+     * @param message  nội dung thông báo
+     * @param type     loại thông báo (vd: "success", "error")
+     * @throws ServletException nếu xảy ra lỗi servlet
+     * @throws IOException      nếu xảy ra lỗi IO khi forward
+     * @author HuongNI
+     */
     private void handleRequest(HttpServletRequest request, HttpServletResponse response, String message, String type) throws ServletException, IOException {
         request.setAttribute("type", type);
         request.setAttribute("message", message);
         request.getRequestDispatcher("/jsp/marketing-features/post-details.jsp").forward(request, response);
     }
 
-    private List<BlogDTO> getAllCategories() {
+    /**
+     * <h4>Lấy danh sách danh mục bài viết</h4>
+     * <p>
+     * Gọi DAO để lấy tất cả danh mục thuộc nhóm "Blog Category".
+     * </p>
+     *
+     * @param category tên nhóm danh mục
+     * @return danh sách BlogDTO chứa thông tin danh mục
+     * @author HuongNI
+     */
+    private List<BlogDTO> getAllCategories(String category) {
         try {
-            return blogDAO.getCategories();
+            return blogDAO.getCategories(category);
         } catch (Exception e) {
             logger.log(Level.SEVERE, e.getMessage(), e);
             return new ArrayList<>();
         }
     }
 
+    /**
+     * <h4>Chuyển danh sách Blog sang BlogDTO</h4>
+     * <p>
+     * Gắn thêm thông tin người dùng, danh mục, media, và encode các ID cho từng blog.
+     * </p>
+     *
+     * @param blogs danh sách blog
+     * @return danh sách BlogDTO đã chuẩn hóa và có đầy đủ thông tin hiển thị
+     * @author HuongNI
+     */
     private List<BlogDTO> getBlogDTO(List<Blog> blogs) {
         List<BlogDTO> list = new ArrayList<>();
         try {
@@ -436,7 +630,19 @@ public class PostDetailsController extends HttpServlet {
         return list;
     }
 
-    // Pagination
+    /**
+     * <h4>Xử lý phân trang blog và đổ dữ liệu cho view</h4>
+     * <p>
+     * Lấy danh sách blog theo từ khóa, danh mục và số trang. Tính toán tổng số trang, sau đó thiết lập dữ liệu hiển thị.
+     * </p>
+     *
+     * @param request    yêu cầu từ client
+     * @param keyword    từ khóa tìm kiếm (có thể null)
+     * @param categoryId ID danh mục (có thể null, sẽ được decode)
+     * @param page       trang hiện tại
+     * @param pageSize   số blog mỗi trang
+     * @author HuongNI
+     */
     private void renderBlogPagination(HttpServletRequest request, String keyword, String categoryId, int page, int pageSize) {
         // Decode and normalize categoryId
         if (categoryId != null) {
@@ -449,7 +655,7 @@ public class PostDetailsController extends HttpServlet {
         // Fetch blogs based on filters
         List<Blog> blogs;
         if (keyword == null && categoryId == null) {
-            blogs = blogDAO.getBlogs(page, pageSize, null);
+            blogs = blogDAO.getBlogs(null, null, page, pageSize, null);
         } else {
             blogs = blogDAO.getBlogs(keyword, categoryId, page, pageSize, null);
         }
@@ -458,7 +664,7 @@ public class PostDetailsController extends HttpServlet {
         List<BlogDTO> blogDTOs = getBlogDTO(blogs);
 
         // Pagination info
-        int totalBlogs = blogDAO.getTotalBlogs(keyword, categoryId);
+        int totalBlogs = blogDAO.getTotalBlogs(keyword, categoryId, null);
         int totalPages = (int) Math.ceil((double) totalBlogs / pageSize);
 
         // Set attributes for the view
@@ -468,5 +674,4 @@ public class PostDetailsController extends HttpServlet {
         request.setAttribute("totalPages", totalPages);
         request.setAttribute("totalElements", totalBlogs);
     }
-
 }
